# translator-tauri

./: package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: category_command.rs  mod.rs  practice_text_command.rs  term_command.rs  user_command.rs
src-tauri/src/domain/: model.rs  request.rs
src-tauri/src/repository/: category_repository.rs  db.rs  jwt.rs  mod.rs  practice_text_repository.rs  term_repository.rs  user_repository.rs
src-tauri/src/service/: category_service.rs  mod.rs  openai_service.rs  practice_text_service.rs  term_service.rs  user_service.rs
src/components/: FilterBar.tsx  Header.tsx  SentenceHeader.tsx  SentenceReview.tsx
src/components/form/: BackwardButton.tsx  ConfirmButton.tsx  PasswordVisibleInput.tsx  TextInput.tsx  Toast.tsx
src/components/pages/create/: SetenceCreatePage.tsx
src/components/pages/edit/: SentenceEditPage.tsx
src/components/pages/list/: SentenceAllListPage.tsx
src/components/pages/main/: ActionButtons.tsx  FilterBar.tsx  Header.tsx  SentenceListPage.tsx
src/components/pages/root/: ActionButtons.tsx  FilterBar.tsx  Header.tsx  RootPage.tsx  SentenceAllListPage.tsx  SentenceEditPage.tsx  SentenceEditor.tsx  SentenceHeader.tsx  SentenceListPage.tsx  SentenceReview.tsx  SetenceCreatePage.tsx
src/components/pages/user/: Login.tsx  Signup.tsx
src/components/type/: Type.tsx
src/components/zustand/: ZustandLogin.tsx
(+3 files in other folders)
